# SplineKnots

./: CMakeLists.txt  ComparisonBenchmarkResult.cpp  ComparisonBenchmarkResult.h  CurveDeBoorKnotsGenerator.cpp  CurveDeBoorKnotsGenerator.h  DeBoorKnotsGenerator.cpp  DeBoorKnotsGenerator.h  EnhancedKnotsGenerator.cpp  EnhancedKnotsGenerator.h  EnhancedReducedDeboorKnotsGenerator.cpp  EnhancedReducedDeboorKnotsGenerator.h  FullAlgorithm.cpp  FullAlgorithm.h  FullKnotsGenerator.cpp  FullKnotsGenerator.h  KnotMatrix.cpp  KnotMatrix.h  KnotVector.h  MathFunction.cpp  MathFunction.h  MulVsDiv.cpp  MulVsDiv.h  NonUniformFullKnotsGenerator.cpp  NonUniformFullKnotsGenerator.h  OperationsBenchmark.cpp  OperationsBenchmark.h  ReadMe.txt  ReducedAlgorithm.cpp  ReducedAlgorithm.h  ReducedCurveDeboorGenerator.cpp  ReducedCurveDeboorGenerator.h  ReducedDeboorKnotsGenerator.cpp  ReducedDeboorKnotsGenerator.h  ReducedKnotsGenerator.cpp  ReducedKnotsGenerator.h  ReducedTridiagonal.cpp  ReducedTridiagonal.h  Spline.cpp  Spline.h  SplineKnots.h  (+11 more)
